packages/svelte/tests/validator/samples/class-state-constructor-2/input.svelte.js
export class Counter {
	constructor() {
		this.count = $state(0);
		this.count = 1;
		this.count = $state(0);
	}
}
