packages/svelte/tests/compiler-errors/samples/runes-wrong-state-placement/main.js
function a(x) {}
a($state(1));
